--- a/assign2/stylesheets/main.css
+++ b/assign2/stylesheets/main.css
@@ -1,25 +1,93 @@
-body {
-  font-family: Verdana, Helvetica, sans-serif;
-  background-color: #DDDDDD;
-}
+			body{
+				margin:0;
+				padding:0;
+				font-family: Arial, Helveica, sans-serif;
+				line-height: 1.5em;
+			}
+			
+			main {
+				padding-bottom: 10010px;
+				margin-bottom: -10000px;
+				float: left;
+				width: 100%;
+			}
+			
+			#nav {
+				float: left;
+				width: 230px;
+				margin-left: -100%;
+				padding-bottom: 10010px;
+				margin-bottom: -10000px;
+				background: #eee;
+			}
+			
+			#wrapper {
+				overflow: hidden;
+			}
+			
+			#content {
+				margin-left: 230px; 
+			}
+			
+			.innertube{
+				margin: 15px; 
+				margin-top: 0;
+			}
+			
+			p {
+				color: #555;
+			}
+	
+			nav ul {
+				list-style-type: none;
+				margin-top: 0.5em;
+				padding: 0;
+			}
+			
+			nav ul a {
+				color: darkgreen;
+				text-decoration: none;
+			}
+			
+			.btn {
+				  background: #3498db;
+				  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+				  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+				  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+				  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+				  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+				  -webkit-border-radius: 60;
+				  -moz-border-radius: 60;
+				  border-radius: 60px;
+				  color: #ffffff;
+				  font-size: 10px;
+				  padding: 10px 20px 10px 20px;
+				  text-decoration: none;
+			}
 
-blockquote {
-	background: #F9F9F9;
-	border-left: 10px solid #ccc;
-	margin: 1.5em 10px;
-	padding: 0.5em 10px;
-	quotes: "\201C""\201D""\2018""\2019";
-}
+			.btn:hover {
+				  background: #3cb0fd;
+				  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+				  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+				  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+				  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+				  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+				  text-decoration: none;
+			}
+			table, th, tr, td{
+				border: 1px solid black;
+				border-collapse: collapse;
+				text-align:center;
+			}
+			.red{
+				color: red;
+				font-size: 120%;
+			}
 
-blockquote:before {
-	color: #ccc;
-	content: open-quote;
-	font-size: 4em;
-	line-height: 0.1em;
-	margin-right: 0.25em;
-	vertical-align: -0.4em;
-}
 
-blockquote p {
-	display: inline;
-}
+
+
+
+
+
+
