--- a/assign2/templates/view.html
+++ b/assign2/templates/view.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>{{ location.name }}</title>
-		<link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
+		<link type="text/css" rel="stylesheet" href="/stylesheets/hw2.css"/>
 	</head>
 
 	<body>
