--- a/assign2/templates/admin.html
+++ b/assign2/templates/admin.html
@@ -2,32 +2,39 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Online Memo---CS496 HW2</title>
-		<link type="text/css" rel="stylesheet" href="/stylesheets/hw3.css"/>
+		<title>Online Memo ~ CS496 HW2</title>
+		<link type="text/css" rel="stylesheet" href="/stylesheets/hw2.css"/>
 	</head>
 
 	<body>
+	<center>
+		<h2>Welcome to Online Memo!</h2>
+			<p> 
+			In this page, you can write a memo and upload <br> 
+			it to cloud. In addition, you can also upload a <br>
+			detial description and picture in the memo :)
+			</p>		
 		<form action='{{ uploadUrl }}' method='POST' enctype="multipart/form-data">
 			<input type='hidden' name='action' value='addLocation'>
 			
-				Location Name: <br>
+				<b>Memo Title:</b> <br>
 				<input type='text' name='locationName' required> <br><br>
 				
-				Importance: <br>
+				<b>Importance: </b> <br>
 				<input type='radio' name='rating' value='1'>Not important <br>
 				<input type='radio' name='rating' value='2'>Average <br>
 				<input type='radio' name='rating' value='3' checked='checked'>Very important 
 				<br><br>
 			
-				Upload an image<br>
+				<b>Upload an image</b><br>
 				<input type='file' name='image' ><br><br>
 
-				Detials<br>
+				<b>Detials:</b><br>
 				<textarea name='description' rows='5' cols='60' placeholder='Enter a description for more detials here'></textarea>
 				<br><br>
 
-				Did you finish it?<br>
-				<input type='checkbox' name='locationActive' value='active'><br><br>
+				<b>Did you finish it?</b><br>
+				<input type='checkbox' name='locationActive' value='Finished'><br><br>
 			
 			<input class="btn" type='submit' value='Add'>
 		</form>
@@ -48,22 +55,6 @@
 		</section>
 		{% endif %}
 
-			<nav id="nav">
-				<div class="innertube">
-					<h3>Describe:</h3>
-					<p> 
-					<b>Welcome to Online Memo!</b><br>
-					In this page, you can <br>
-					write a memo and upload <br> 
-					it to cloud. In addition, <br>
-					you can also upload a <br>
-					detial description and <br>
-					picture in the memo :)
-					</p>
-				</div>
-			</nav>
-
-
-
+</center>
 	</body>
 </html>
