--- a/assign2/templates/view.html
+++ b/assign2/templates/view.html
@@ -8,6 +8,12 @@
 
 	<body>
 	<center>
+	<h2>Welcome to Memo View page!</h2>
+			<p> 
+			In this page, you can view a memo and update it :)<br> 
+			</p>		
+
+
 		{% if location.name %}
 			<h3>Memo Title:</h3>
 			<p>{{ location.name }}
