--- a/assign2/templates/view.html
+++ b/assign2/templates/view.html
@@ -44,7 +44,8 @@
 			{% endif %}		
 		
 		<br><br>
-		<b><a class="btn" href='/edit?key={{ key }}'>Update your Memo</a> </b>
+		<a class="btn" href='/edit?key={{ key }}'>Update your Memo</a> &nbsp&nbsp
+		<a class="btn" href='/admin?key={{ key }}'>Back to Main page</a>
 
 		</center>
 	</body>
