--- a/assign2/templates/edit.html
+++ b/assign2/templates/edit.html
@@ -13,7 +13,7 @@
 			In this page, you can update your<br>
 			memo, once you update your memo, click<br>
 			"View Memo" to view updated memo<br>
-			<font color="red">Make sure you fill all blanks to update memo!</font>
+			<b><font color="red">Make sure you fill all blanks to update memo!</font></b>
 			</p>
 
 
@@ -21,7 +21,7 @@
 		<form action="{{ editUrl }}" method="POST" enctype="multipart/form-data">
 			<input type='hidden' name='key' value='{{ location.key.urlsafe() }}'>
 			
-				<h3> Memo Title: </h3><br>
+				<h3> Memo Title: </h3>
 				{% if location.name %}
 					<input type='text' name='locationName' value='{{ location.name }}' required>
 				{% else %}
@@ -29,8 +29,8 @@
 				{% endif %}
 			<br><br>
 
-				<h3> Importance: </h3><br>
-				<p>1--Not important   2--average   3--very important</p><br>
+				<h3> Importance: </h3>
+				<p>1--Not important &nbsp&nbsp  2--average  &nbsp&nbsp 3--very important</p><br>
 				{% if location.rating %}
 					{% for i in range(1, 3) %}
 						{% if location.rating == i %}
@@ -44,7 +44,7 @@
 
 				
 			
-				<h3>Picture:</h3><br>
+				<h3>Picture:</h3>
 				{% if img_url %}
 					<img src='{{ img_url }}'>
 				{% endif %}
@@ -65,7 +65,7 @@
 				<br><br>
 
 
-			<h3>Did you finish it?</h3><br>
+			<h3>Did you finish it?</h3>
 				{% if location.active == True %}
 					<input type='checkbox' name='locationActive' value='finish' checked> No
 				{% else %}
@@ -77,7 +77,7 @@
 			<input class="btn" type='submit' value='Update'>
 		</form>
 		<form action='/view?key={{ key }}' method='GET'>
-		<br><br>
+		<br>
 			<button class="btn" type='submit' name='key' value='{{ key }}'>View Memo</button>
 		</form>
 
