--- a/assign2/templates/admin.html
+++ b/assign2/templates/admin.html
@@ -36,7 +36,7 @@
 				<b>Did you finish it?</b><br>
 				<input type='checkbox' name='locationActive' value='finish'><br><br>
 			
-			<input class="btn" type='submit' value='Add'>
+			<input class="btn" type='submit' value='Add Memo'>
 		</form>
 
 		{% if locations %}
