--- a/assign2/templates/admin.html
+++ b/assign2/templates/admin.html
@@ -21,9 +21,9 @@
 				<input type='text' name='locationName' required> <br><br>
 				
 				<b>Importance: </b> <br>
-				<input type='radio' name='rating' value='Not important'>Not important <br>
-				<input type='radio' name='rating' value='Average'>Average <br>
-				<input type='radio' name='rating' value='Very important' checked='checked'>Very important 
+				<input type='radio' name='rating' value='1'>Not important <br>
+				<input type='radio' name='rating' value='2'>Average <br>
+				<input type='radio' name='rating' value='3' checked='checked'>Very important 
 				<br><br>
 			
 				<b>Upload an image</b><br>
@@ -34,7 +34,7 @@
 				<br><br>
 
 				<b>Did you finish it?</b><br>
-				<input type='checkbox' name='locationActive' value='finish'><br><br>
+				<input type='checkbox' name='locationActive' value='finish'>Yes/leave blank for no<br><br>
 			
 			<input class="btn" type='submit' value='Add Memo'>
 		</form>
