--- a/assign2/templates/edit.html
+++ b/assign2/templates/edit.html
@@ -70,7 +70,7 @@
 				{% if location.active == True %}
 					<input type='checkbox' name='locationActive' value='finish' checked> Yes
 				
-					<input type='checkbox' name='locationActive' value='finish'> No
+					<input type='checkbox' name='locationActive' value='nofinish'> No
 				{% endif %}
 			<br><br>
 
