--- a/assign2/templates/admin.html
+++ b/assign2/templates/admin.html
@@ -27,10 +27,10 @@
 				<br><br>
 			
 				<b>Upload an image</b><br>
-				<input type='file' name='image' ><br><br>
+				<input type='file' name='image' required><br><br>
 
 				<b>Detials:</b><br>
-				<textarea name='description' rows='5' cols='60' placeholder='Enter a description for more detials here'></textarea>
+				<textarea name='description' rows='5' cols='60' placeholder='Enter a description for more detials here' required></textarea>
 				<br><br>
 
 				<b>Did you finish it?</b><br>
