--- a/assign2/templates/edit.html
+++ b/assign2/templates/edit.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<center>
-		<h2>Welcome to Online Memo!</h2>
+		<h2>Welcome to Memo update page!</h2>
 			<p> 
 			In this page, you can update your<br>
 			memo, once you update your memo, click<br>
