--- a/assign3_final/templates/edit.html
+++ b/assign3_final/templates/edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset='utf-8'>
-		<title>Edit {{ location.name }}</title>
+		<title>Edit {{ location.title }}</title>
 		<link type="text/css" rel="stylesheet" href="/stylesheets/hw2.css"/>
 	</head>
 
@@ -22,8 +22,8 @@
 			<input type='hidden' name='key' value='{{ location.key.urlsafe() }}'>
 			
 				<h3> Memo Title: </h3>
-				{% if location.name %}
-					<input type='text' name='locationName' value='{{ location.name }}' required>
+				{% if location.title %}
+					<input type='text' name='locationName' value='{{ location.title }}' required>
 				{% else %}
 					<input type='text' name='locationName' required>
 				{% endif %}
@@ -31,9 +31,9 @@
 
 				<h3> Importance: </h3>
 				<p>1--Not important &nbsp&nbsp  2--average  &nbsp&nbsp 3--very important</p><br>
-				{% if location.rating %}
+				{% if location.improtance %}
 					{% for i in range(1, 4) %}
-						{% if location.rating == i %}
+						{% if location.improtance == i %}
 							<input type='radio' name='rating' value='{{ i }}' checked>{{ i }}
 						{% else %}
 							<input type='radio' name='rating' value='{{ i }}'>{{ i }}
